--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "react-typescript-from-scratch",
-  "version": "1.0.0",
-  "description": "",
+  "name": "correct-frequency-random-letters",
+  "version": "0.1.0",
+  "description": "gets random letters in the correct frequency as in the english dictionary or a sample of english text",
+  "homepage" : "https://github.com/timbrownls20/correct-frequency-random-letters",
+  "keywords": [
+    "letters",
+    "random",
+    "english",
+    "dictionary"
+  ],
   "main": "index.js",
   "scripts": {
     "test": "jest",
@@ -10,29 +17,24 @@
     "build:start": "webpack && serve -s dist",
     "update": "npx npm-check-updates -u && npm install && npm test"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Tim Brown",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/timbrownls20/correct-frequency-random-letters"
+  },
+  "private": "false",
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
-    "@types/lodash": "^4.14.178",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
-    "@types/react-router-dom": "^5.3.2",
     "@types/webpack-env": "^1.16.3",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
     "babel-preset-react": "^6.24.1",
-    "css-loader": "^6.5.1",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
@@ -44,7 +46,6 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -58,11 +59,7 @@
     },
     "roots": [
       "<rootDir>/src"
-    ],
-    "moduleNameMapper": {
-      "\\.(jpg|ico|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less)$": "<rootDir>/__mocks__/fileMock.js"
-    }
+    ]
   },
   "browserslist": {
     "production": [
