--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "correct-frequency-random-letters",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "gets random letters in the correct frequency as in the english dictionary or a sample of english text",
-  "homepage" : "https://github.com/timbrownls20/correct-frequency-random-letters",
+  "homepage": "https://github.com/timbrownls20/correct-frequency-random-letters",
   "keywords": [
     "letters",
     "random",
     "english",
     "dictionary"
   ],
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "start": "webpack serve --config webpack.config.js",
@@ -23,7 +24,6 @@
     "type": "git",
     "url": "https://github.com/timbrownls20/correct-frequency-random-letters"
   },
-  "private": "false",
   "devDependencies": {
     "@babel/core": "^7.16.5",
     "@babel/plugin-proposal-class-properties": "^7.16.5",
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.16.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.178",
     "@types/webpack-env": "^1.16.3",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
@@ -46,8 +47,7 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "lodash": "^4.17.21"
   },
   "jest": {
     "testEnvironment": "jsdom",
