--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "allowJs": true,
       "moduleResolution": "node",
       "allowSyntheticDefaultImports": true,
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "declaration": true
     }
   }
