--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
-    "start": "webpack serve --config webpack.config.js",
-    "build": "webpack",
-    "build:start": "webpack && serve -s dist",
+    "build": "tsc",
     "update": "npx npm-check-updates -u && npm install && npm test"
   },
   "author": "Tim Brown",
@@ -25,35 +23,19 @@
     "url": "https://github.com/timbrownls20/correct-frequency-random-letters"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/plugin-proposal-class-properties": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-typescript": "^7.16.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@types/jest": "^27.0.3",
     "@types/lodash": "^4.14.178",
-    "@types/webpack-env": "^1.16.3",
-    "babel-jest": "^27.4.5",
-    "babel-loader": "^8.2.3",
-    "babel-preset-react": "^6.24.1",
     "jest": "^27.4.5",
     "source-map-loader": "^3.0.0",
-    "style-loader": "^3.3.1",
     "ts-jest": "^27.1.1",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.5.4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "typescript": "^4.5.4"
   },
   "dependencies": {
     "lodash": "^4.17.21"
   },
   "jest": {
-    "testEnvironment": "jsdom",
-    "setupFilesAfterEnv": [
-      "./setupTests.ts"
-    ],
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
